Bug 1611038 - Introduce PresShell::AddResizeEventFlushObserverIfNeeded. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D60811

--HG--
extra : moz-landing-system : lando